# text-expander

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/windows/: ClipboardManager.cpp  ClipboardManager.h
win/: main.cpp
